crates/bsql/tests/compile_fail/type_mismatch_str_for_int.stderr
error: PostgreSQL error: relation "users" does not exist (at position 16)
                SQL: SELECT id FROM users WHERE id = $1
                                    ^
         available tables: bench_orders, bench_users
 --> tests/compile_fail/type_mismatch_str_for_int.rs:4:13
  |
4 |       let _ = bsql::query!(
  |  _____________^
5 | |         "SELECT id FROM users WHERE id = $name: &str"
6 | |     );
  | |_____^
  |
  = note: this error originates in the macro `bsql::query` (in Nightly builds, run with -Z macro-backtrace for more info)
